# xai_gpt_shap

./: README-pypi.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
xai_gpt_shap/: ShapCalculator.py  main.py
xai_gpt_shap_lima/: ChatGptClient.py  ShapCalculator.py  main.py  roles.py
xai_gpt_shap_lima/data/: 10_instance.csv  shap_positive.csv
