[tool.poetry]
name = "xai-gpt-shap-lima"
version = "0.1.0"
description = ""
authors = ["Jan Sernec (JanHuntersi) <jan.sernec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.57.2"
rich = ">=13.7.0"
prompt-toolkit = ">=3.0.43"
tiktoken = "^0.8.0"
pandas = "^2.2.3"
shap = "^0.46.0"
onnxruntime = "^1.20.1"

[tool.poetry.group.dev.dependencies]
xgboost = "^2.1.3"

[tool.poetry.scripts]
xai-shap = "xai_gpt_shap_lima.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
